# rust-fmod

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.TXT  Makefile  README.md  index.html  params.json
.github/workflows/: main.yaml
examples/: Cargo.toml
examples/3d/: 3d.rs  Cargo.toml  main.rs
examples/3d/src/: 3d.rs
examples/dsp_custom/: Cargo.toml  dsp_custom.rs  main.rs
examples/dsp_custom/src/: dsp_custom.rs
examples/effects/: Cargo.toml  effects.rs  main.rs
examples/effects/src/: effects.rs
examples/file_callbacks/: Cargo.toml  file_callbacks.rs  main.rs
examples/file_callbacks/src/: file_callbacks.rs
examples/recording/: Cargo.toml  main.rs  recording.rs
examples/recording/src/: recording.rs
examples/simple_music_player/: Cargo.toml  main.rs  simple_music_player.rs
examples/simple_music_player/src/: simple_music_player.rs
examples/simple_music_reader/: main.rs
examples/user_created_sound/: Cargo.toml  main.rs  user_created_sound.rs
examples/user_created_sound/src/: user_created_sound.rs
src/: async_read_info.rs  build.sh  callbacks.rs  channel.rs  channel_group.rs  dsp.rs  dsp_connection.rs  enums.rs  error.rs  ffi.rs  file.rs  fmod.rs  fmod_sys.rs  geometry.rs  lib.rs  lib32.rs  main  main.rs  reverb.rs  reverb_properties.rs  rfmod.rs  sound.rs  sound_group.rs  types.rs  utils.rs  vector.rs
