[package]
name = "fmod"
version = "0.9.21"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

description = "A rust binding for the FMOD library"
repository = "https://github.com/GuillaumeGomez/rust-fmod"
documentation = "http://rust-ci.org/GuillaumeGomez/rust-fmod/doc/rfmod/"
readme = "README.md"
keywords = ["library", "sound", "3D", "fmod", "fmodex"]
license-file = "LICENSE.TXT"

[dependencies]
c_vec = "~1.0"
byteorder = "*"
libc = "*"

[lib]
name = "rfmod"
crate-type = ["dylib", "rlib"]
