[package]
name = "rfmod-examples"
version = "0.9.6"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

[dependencies.fmod]
path = "../"

[[bin]]
name = "3d"
path = "./3d/src/3d.rs"

[[bin]]
name = "dsp_custom"
path = "./dsp_custom/src/dsp_custom.rs"

[[bin]]
name = "effects"
path = "./effects/src/effects.rs"

[[bin]]
name = "file_callbacks"
path = "./file_callbacks/src/file_callbacks.rs"

[[bin]]
name = "recording"
path = "./recording/src/recording.rs"

[[bin]]
name = "simple_music_player"
path = "./simple_music_player/src/simple_music_player.rs"

[[bin]]
name = "user_created_sound"
path = "./user_created_sound/src/user_created_sound.rs"